--- a/Starter-Class/Arch/Vagrantfile
+++ b/Starter-Class/Arch/Vagrantfile
@@ -85,13 +85,16 @@ Vagrant.configure("2") do |config|
   config.vm.provision "shell", privileged: true, inline: <<-SHELL
     systemctl enable --now snapd.socket
     systemctl start snapd.socket
+    echo "Enabling classic snap support"
     ln -s /var/lib/snapd/snap /snap #To enable classic snap support
-    echo "done"
-    snap install terraform --classic
-    snap install kubectl --classic
-    snap install helm3
     echo "######################"
     echo "###Finished Stage 3###"
     echo "######################"
+    echo " "
+    echo "###############################################"
+    echo "###You can now install programs through snap###"
+    echo "###############################################################"
+    echo "###Install Terraform using "snap install terraform --classic###"
+    echo "###############################################################"
   SHELL
 end
